09082021 commit 3 codewars Kata

--- a/Codewars Kata.ipynb
+++ b/Codewars Kata.ipynb
@@ -159,20 +159,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
     "def two_sum(numbers, target):\n",
-    "    for i in numbers: \n",
-    "        target_diff = target - i\n",
-    "        if target_diff in numbers and numbers.index(i)!=numbers.index(target_diff):\n",
-    "            return(numbers.index(i), numbers.index(target_diff))"
+    "    for i in range(len(numbers)): \n",
+    "        for j in range(i+1,len(numbers)):\n",
+    "            if i+j==target:\n",
+    "                return (numbers.index(i), numbers.index(j))\n",
+    "            print(i,j)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,16 +191,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1\n",
+      "0 2\n",
+      "0 3\n",
+      "0 4\n",
+      "1 2\n",
+      "1 3\n",
+      "1 4\n",
+      "2 3\n",
+      "2 4\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(1, 4)"
+       "(2, 3)"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,27 +235,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "[3, 4, 5]"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "target_diff"
+    "numbers[2:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,17 +264,257 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 189,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numbers[1:]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(numbers)):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for j in range(1,len(numbers)):\n",
+    "    print(j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def two_sum(numbers, target):\n",
+    "    for i in numbers: \n",
+    "        target_diff = target-i\n",
+    "        print(numbers.index(i)+1)\n",
+    "        if target_diff in range(numbers.index(i)+1, len(numbers)):\n",
+    "            return (numbers.index(i), numbers.index(target_diff))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0, 0)"
+      ]
+     },
+     "execution_count": 253,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "two_sum([2,2,3], 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3)"
+      ]
+     },
+     "execution_count": 254,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "two_sum([1,2,3,4,5],7)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Isograms "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7 kyu"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An isogram is a word that has no repeating letters, consecutive or non-consecutive. Implement a function that determines whether a string that contains only letters is an isogram. Assume the empty string is an isogram. Ignore letter case.\n",
+    "\n",
+    "Based on: https://www.codewars.com/kata/54ba84be607a92aa900000f1/train/python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_isogram(string):\n",
+    "    new_list = []\n",
+    "    for i in string.lower(): \n",
+    "        if i not in new_list: \n",
+    "            new_list.append(i)\n",
+    "        else: \n",
+    "            return False\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Highest and Lowest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7 kyu"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this little assignment you are given a string of space separated numbers, and have to return the highest and lowest number."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def high_and_low(numbers):\n",
+    "    new_list = []\n",
+    "    for i in list(numbers.split()): \n",
+    "        new_list.append(int(i))\n",
+    "    return f'{min(new_list)} {max(new_list)}'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Regex validate PIN code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7 kyu"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ATM machines allow 4 or 6 digit PIN codes and PIN codes cannot contain anything but exactly 4 digits or exactly 6 digits.\n",
+    "\n",
+    "If the function is passed a valid PIN string, return true, else return false."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# my_solution\n",
+    "def validate_pin(pin): \n",
+    "    import re\n",
+    "    if (len(pin)==4 or len(pin)==6) and (len(re.findall(r'[^\\d]', pin))==0): \n",
+    "        return True\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# best from codewars: \n",
+    "def validate_pin(pin):\n",
+    "    return len(pin) in (4, 6) and pin.isdigit()"
+   ]
   }
  ],
  "metadata": {
